새로운 UI 적용하기
